--- a/src/css/Blogs.css
+++ b/src/css/Blogs.css
@@ -114,63 +114,30 @@
 
 @media only screen and (max-width: 600px) {
     #blogs-main-div {
-        display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-evenly;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
+        justify-content: center;
         width: 75%;
-        height: 80%;
-        gap: 20px;
     }
 
     #other-blogs-div {
-        display: flex;
         flex-direction: row;
         border-radius: 0px;
         width: 100%;
-        color: white;
-        gap: 20px;
-        overflow: auto;
-        padding: 5px;
-        font-size: .5em;
+        font-size: .7em;
     }
 
     #recent-blog-div {
-        display: flex;
-        flex-direction: column;
-        height: 80%;
+        height: 60%;
         width: 100%;
-        color: white;
-    }
-
-    #recent-blog {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        height: 100%;
-        background: rgba(255, 255, 255, 0.2);
-        border: 1px solid transparent;
-        border-radius: 25px;
-        padding: 20px;
-        cursor: pointer;
-        transition: background .3s ease;
-        backdrop-filter: blur(20px);
-
     }
 
     #recent-title {
         font-size: 1.2em;
-        margin: 0;
     }
 
     #recent-img {
         border-radius: 20px;
-        height: auto;
-        width: 100%;
     }
 
 
@@ -180,39 +147,28 @@
     }
 
     .tag-list {
-        display: flex;
         gap: 5px;
-        flex-direction: row;
-        width: 90%;
+
     }
 
 
     .blog-tag {
-        display: flex;
-        width: fit-content;
         font-size: .5em;
-        background-color: rgba(255, 255, 255, 0.2);
-        padding: 5px;
-        border-radius: 20px;
     }
 
     .other-blog {
-        background: rgba(255, 255, 255, 0.2);
-        backdrop-filter: blur(20px);
-        border: 1px solid transparent;
-        display: flex;
         flex-direction: column;
-        gap: 10px;
-        border-radius: 20px;
-        cursor: pointer;
-        transition: background .3s ease;
-        padding: 20px;
     }
 
     .other-blog:hover {
         background: rgba(255, 255, 255, 0.2);
         border: 1px solid transparent;
 
+    }
+
+    #recent-blog:hover {
+        background: rgba(255, 255, 255, 0.2);
+        border: 1px solid transparent;
     }
 
 }
