--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -108,8 +108,8 @@
 
     .project:hover,
     .archiveItem:hover {
-        background: unset;
-        border: unset;
+        background: rgba(255, 255, 255, 0.2);
+        border: 2px solid transparent;
     }
 
     .project h1,
